crates/alien-cloudformation/tests/generator/snapshots/generator__generator__aws_compute_tests__aws_artifact_registry.snap
---
source: crates/alien-cloudformation/tests/generator/aws_compute_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: aws_artifact_registry
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - ManagingRoleArn
      - ManagingAccountId
    - Label:
        default: Operations
      Parameters:
      - UpdatesMode
      - TelemetryMode
      - HeartbeatsMode
    ParameterLabels:
      HeartbeatsMode:
        default: Heartbeats
      ManagingAccountId:
        default: Image account ID
      ManagingRoleArn:
        default: Management role ARN
      TelemetryMode:
        default: Telemetry
      UpdatesMode:
        default: Updates
Parameters:
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
    Default: ''
  ManagingAccountId:
    Type: String
    Description: AWS account ID for the management account that hosts application container images.
    Default: ''
  NetworkMode:
    Type: String
    Description: Choose create-new for a managed VPC, use-existing for your VPC, or use-default for the account default VPC.
    Default: create-new
    AllowedValues:
    - create-new
    - use-existing
    - use-default
  UpdatesMode:
    Type: String
    Description: How updates are applied after setup registration.
    Default: auto
    AllowedValues:
    - auto
    - approval-required
  TelemetryMode:
    Type: String
    Description: Telemetry collection behavior.
    Default: auto
    AllowedValues:
    - auto
  HeartbeatsMode:
    Type: String
    Description: Heartbeat health-check behavior.
    Default: "on"
    AllowedValues:
    - "off"
    - "on"
Resources:
  RegistryRepository:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName:
        Fn::Sub: ${AWS::StackName}-registry
      ImageScanningConfiguration:
        ScanOnPush: true
      ImageTagMutability: IMMUTABLE
      EncryptionConfiguration:
        EncryptionType: AES256
      LifecyclePolicy:
        LifecyclePolicyText:
          Fn::ToJsonString:
            rules:
            - rulePriority: 1
              description: Retain the 100 most recent images
              selection:
                tagStatus: any
                countType: imageCountMoreThan
                countNumber: 100
              action:
                type: expire
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: registry
      - Key: resource-type
        Value: artifact-registry
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
  RegistryPullRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName:
        Fn::Sub: ${AWS::StackName}-registry-pull
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            AWS:
              Ref: ManagingRoleArn
          Action: sts:AssumeRole
      Policies:
      - PolicyName: ecr-pull
        PolicyDocument:
          Version: 2012-10-17
          Statement:
          - Sid: GetAuthorizationToken
            Effect: Allow
            Action: ecr:GetAuthorizationToken
            Resource: '*'
          - Sid: RepositoryAccess
            Effect: Allow
            Action:
            - ecr:BatchCheckLayerAvailability
            - ecr:BatchGetImage
            - ecr:DescribeImages
            - ecr:DescribeRepositories
            - ecr:GetDownloadUrlForLayer
            - ecr:ListImages
            Resource:
            - Fn::GetAtt:
              - RegistryRepository
              - Arn
            - Fn::Sub: arn:${AWS::Partition}:ecr:${AWS::Region}:${AWS::AccountId}:repository/${AWS::StackName}-registry-*
            Condition:
              StringEqualsIfExists:
                aws:ResourceTag/deployment:
                  Ref: AWS::StackName
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: registry
      - Key: resource-type
        Value: artifact-registry
    DependsOn:
    - RegistryRepository
  RegistryPushRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName:
        Fn::Sub: ${AWS::StackName}-registry-push
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            AWS:
              Ref: ManagingRoleArn
          Action: sts:AssumeRole
      Policies:
      - PolicyName: ecr-push-pull
        PolicyDocument:
          Version: 2012-10-17
          Statement:
          - Sid: GetAuthorizationToken
            Effect: Allow
            Action: ecr:GetAuthorizationToken
            Resource: '*'
          - Sid: RepositoryAccess
            Effect: Allow
            Action:
            - ecr:BatchCheckLayerAvailability
            - ecr:BatchGetImage
            - ecr:DescribeImages
            - ecr:DescribeRepositories
            - ecr:GetDownloadUrlForLayer
            - ecr:ListImages
            - ecr:CompleteLayerUpload
            - ecr:DeleteRepository
            - ecr:InitiateLayerUpload
            - ecr:PutImage
            - ecr:UploadLayerPart
            Resource:
            - Fn::GetAtt:
              - RegistryRepository
              - Arn
            - Fn::Sub: arn:${AWS::Partition}:ecr:${AWS::Region}:${AWS::AccountId}:repository/${AWS::StackName}-registry-*
            Condition:
              StringEqualsIfExists:
                aws:ResourceTag/deployment:
                  Ref: AWS::StackName
          - Sid: TaggedRepositoryCreation
            Effect: Allow
            Action:
            - ecr:CreateRepository
            Resource:
            - Fn::GetAtt:
              - RegistryRepository
              - Arn
            - Fn::Sub: arn:${AWS::Partition}:ecr:${AWS::Region}:${AWS::AccountId}:repository/${AWS::StackName}-registry-*
            Condition:
              StringEquals:
                aws:RequestTag/deployment:
                  Ref: AWS::StackName
              StringEqualsIfExists:
                aws:ResourceTag/deployment:
                  Ref: AWS::StackName
          - Sid: OwnRepositoryTagging
            Effect: Allow
            Action:
            - ecr:TagResource
            Resource:
            - Fn::GetAtt:
              - RegistryRepository
              - Arn
            - Fn::Sub: arn:${AWS::Partition}:ecr:${AWS::Region}:${AWS::AccountId}:repository/${AWS::StackName}-registry-*
            Condition:
              StringEquals:
                aws:RequestTag/deployment:
                  Ref: AWS::StackName
                aws:ResourceTag/deployment:
                  Ref: AWS::StackName
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: registry
      - Key: resource-type
        Value: artifact-registry
    DependsOn:
    - RegistryRepository
Outputs:
  DeploymentSourceKind:
    Value: cloudformation
    Description: Setup source kind.
  DeploymentResourcePrefix:
    Value:
      Ref: AWS::StackName
    Description: Stable physical resource prefix.
  DeploymentPlatform:
    Value: aws
    Description: Target platform.
  DeploymentRegion:
    Value:
      Ref: AWS::Region
    Description: AWS region.
  DeploymentSetupTarget:
    Value: aws
    Description: Setup target.
  DeploymentSetupFingerprint:
    Value: test
    Description: Setup compatibility fingerprint.
  DeploymentSetupImportFormatVersion:
    Value: 1
    Description: Setup registration payload format version.
  DeploymentSetupFingerprintVersion:
    Value: 1
    Description: Setup fingerprint algorithm version.
  DeploymentManagementConfig:
    Value:
      Fn::ToJsonString:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
    Description: Deployment registration management configuration JSON.
  DeploymentStackSettings:
    Value:
      Fn::ToJsonString:
        deploymentModel: push
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Ref: AWS::NoValue
    Description: Deployment registration settings JSON.
  DeploymentResources:
    Value:
      Fn::ToJsonString:
      - id: registry
        type: artifact-registry
        importData:
          accountId:
            Ref: AWS::AccountId
          region:
            Ref: AWS::Region
          registryId:
            Fn::Sub: ${AWS::AccountId}:${AWS::Region}
          registryEndpoint:
            Fn::Sub: ${AWS::AccountId}.dkr.ecr.${AWS::Region}.${AWS::URLSuffix}
          repositoryPrefix:
            Fn::Sub: ${AWS::StackName}-registry
          deploymentPrefix:
            Ref: AWS::StackName
          pullRoleArn:
            Fn::GetAtt:
            - RegistryPullRole
            - Arn
          pushRoleArn:
            Fn::GetAtt:
            - RegistryPushRole
            - Arn
    Description: Deployment registration resources JSON.
