crates/alien-cloudformation/tests/generator/snapshots/generator__generator__aws_compute_tests__aws_build.snap
---
source: crates/alien-cloudformation/tests/generator/aws_compute_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: aws_build
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - ManagingRoleArn
      - ManagingAccountId
    - Label:
        default: Operations
      Parameters:
      - UpdatesMode
      - TelemetryMode
      - HeartbeatsMode
    ParameterLabels:
      HeartbeatsMode:
        default: Heartbeats
      ManagingAccountId:
        default: Image account ID
      ManagingRoleArn:
        default: Management role ARN
      TelemetryMode:
        default: Telemetry
      UpdatesMode:
        default: Updates
Parameters:
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
    Default: ''
  ManagingAccountId:
    Type: String
    Description: AWS account ID for the management account that hosts application container images.
    Default: ''
  NetworkMode:
    Type: String
    Description: Choose create-new for a managed VPC, use-existing for your VPC, or use-default for the account default VPC.
    Default: create-new
    AllowedValues:
    - create-new
    - use-existing
    - use-default
  EndpointAccess:
    Type: String
    Description: Who can reach this deployment's endpoints. Private access requires AWS managed containers and cannot change after setup.
    Default: internet
    AllowedValues:
    - internet
    - private
  UpdatesMode:
    Type: String
    Description: How updates are applied after setup registration.
    Default: auto
    AllowedValues:
    - auto
    - approval-required
  TelemetryMode:
    Type: String
    Description: Telemetry collection behavior.
    Default: auto
    AllowedValues:
    - auto
  HeartbeatsMode:
    Type: String
    Description: Heartbeat health-check behavior.
    Default: "on"
    AllowedValues:
    - "off"
    - "on"
Resources:
  BuilderRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            Service: codebuild.amazonaws.com
          Action: sts:AssumeRole
      Policies:
      - PolicyName: deployment-permissions
        PolicyDocument:
          Version: 2012-10-17
          Statement:
          - Sid: WriteLogs
            Effect: Allow
            Action:
            - logs:CreateLogGroup
            - logs:CreateLogStream
            - logs:PutLogEvents
            Resource: '*'
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: builder
      - Key: resource-type
        Value: build
  BuilderLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName:
        Fn::Sub: /aws/codebuild/${AWS::StackName}-builder
      RetentionInDays: 30
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
  Builder:
    Type: AWS::CodeBuild::Project
    Properties:
      Name:
        Fn::Sub: ${AWS::StackName}-builder
      ServiceRole:
        Fn::GetAtt:
        - BuilderRole
        - Arn
      Artifacts:
        Type: NO_ARTIFACTS
      Source:
        Type: NO_SOURCE
        BuildSpec: |
          version: 0.2
          phases:
            build:
              commands:
                - echo "Build project is ready for runtime-provided commands"
      Environment:
        Type: LINUX_CONTAINER
        Image: aws/codebuild/standard:7.0
        ComputeType: BUILD_GENERAL1_MEDIUM
        PrivilegedMode: true
        EnvironmentVariables:
        - Name: PROFILE
          Value: release
          Type: PLAINTEXT
      LogsConfig:
        CloudWatchLogs:
          Status: ENABLED
          GroupName:
            Ref: BuilderLogGroup
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: builder
      - Key: resource-type
        Value: build
    DependsOn:
    - BuilderLogGroup
    - BuilderRole
Outputs:
  DeploymentSourceKind:
    Value: cloudformation
    Description: Setup source kind.
  DeploymentResourcePrefix:
    Value:
      Ref: AWS::StackName
    Description: Stable physical resource prefix.
  DeploymentPlatform:
    Value: aws
    Description: Target platform.
  DeploymentRegion:
    Value:
      Ref: AWS::Region
    Description: AWS region.
  DeploymentSetupTarget:
    Value: aws
    Description: Setup target.
  DeploymentSetupFingerprint:
    Value: test
    Description: Setup compatibility fingerprint.
  DeploymentSetupImportFormatVersion:
    Value: 1
    Description: Setup registration payload format version.
  DeploymentSetupFingerprintVersion:
    Value: 1
    Description: Setup fingerprint algorithm version.
  DeploymentManagementConfig:
    Value:
      Fn::ToJsonString:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
    Description: Deployment registration management configuration JSON.
  DeploymentStackSettings:
    Value:
      Fn::ToJsonString:
        deploymentModel: push
        endpointAccess:
          Ref: EndpointAccess
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Ref: AWS::NoValue
    Description: Deployment registration settings JSON.
  DeploymentResources:
    Value:
      Fn::ToJsonString:
      - id: builder
        type: build
        importData:
          projectName:
            Ref: Builder
          projectArn:
            Fn::GetAtt:
            - Builder
            - Arn
          buildEnvVars:
            PROFILE: release
    Description: Deployment registration resources JSON.
