crates/alien-cloudformation/tests/generator/snapshots/generator__generator__aws_compute_tests__aws_function_public.snap
---
source: crates/alien-cloudformation/tests/generator/aws_compute_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: aws_function_public
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - ManagingRoleArn
      - ManagingAccountId
    - Label:
        default: Custom domain
      Parameters:
      - DomainName
      - HostedZoneId
      - CertificateArn
    - Label:
        default: Operations
      Parameters:
      - UpdatesMode
      - TelemetryMode
      - HeartbeatsMode
    ParameterLabels:
      CertificateArn:
        default: Certificate ARN
      DomainName:
        default: Domain name
      HeartbeatsMode:
        default: Heartbeats
      HostedZoneId:
        default: Hosted zone ID
      ManagingAccountId:
        default: Image account ID
      ManagingRoleArn:
        default: Management role ARN
      TelemetryMode:
        default: Telemetry
      UpdatesMode:
        default: Updates
Parameters:
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
    Default: ''
  ManagingAccountId:
    Type: String
    Description: AWS account ID for the management account that hosts application container images.
    Default: ''
  NetworkMode:
    Type: String
    Description: Choose create-new for a managed VPC, use-existing for your VPC, or use-default for the account default VPC.
    Default: create-new
    AllowedValues:
    - create-new
    - use-existing
    - use-default
  DomainName:
    Type: String
    Description: Optional custom domain. Leave unset to use the deployment-managed endpoint.
    Default: ''
  HostedZoneId:
    Type: String
    Description: Route 53 hosted zone ID for the custom domain. Not needed for the auto-generated domain.
    Default: ''
  CertificateArn:
    Type: String
    Description: ACM certificate ARN for the custom domain. Required when DomainName is set.
    Default: ''
    AllowedPattern: ^$|^arn:aws(-[a-z]+)?:acm:[a-z0-9-]+:[0-9]{12}:certificate/.+$
  UpdatesMode:
    Type: String
    Description: How updates are applied after setup registration.
    Default: auto
    AllowedValues:
    - auto
    - approval-required
  TelemetryMode:
    Type: String
    Description: Telemetry collection behavior.
    Default: auto
    AllowedValues:
    - auto
  HeartbeatsMode:
    Type: String
    Description: Heartbeat health-check behavior.
    Default: "on"
    AllowedValues:
    - "off"
    - "on"
Conditions:
  HasDomainName:
    Fn::Not:
    - Fn::Equals:
      - Ref: DomainName
      - ''
Rules:
  CustomDomainCertificate:
    Assertions:
    - Assert:
        Fn::Or:
        - Fn::Equals:
          - Ref: DomainName
          - ''
        - Fn::Not:
          - Fn::Equals:
            - Ref: CertificateArn
            - ''
      AssertDescription: CertificateArn must be set to an AWS ACM certificate ARN when DomainName is set.
Resources: {}
Outputs:
  DeploymentSourceKind:
    Value: cloudformation
    Description: Setup source kind.
  DeploymentResourcePrefix:
    Value:
      Ref: AWS::StackName
    Description: Stable physical resource prefix.
  DeploymentPlatform:
    Value: aws
    Description: Target platform.
  DeploymentRegion:
    Value:
      Ref: AWS::Region
    Description: AWS region.
  DeploymentSetupTarget:
    Value: aws
    Description: Setup target.
  DeploymentSetupFingerprint:
    Value: test
    Description: Setup compatibility fingerprint.
  DeploymentSetupImportFormatVersion:
    Value: 1
    Description: Setup registration payload format version.
  DeploymentSetupFingerprintVersion:
    Value: 1
    Description: Setup fingerprint algorithm version.
  DeploymentManagementConfig:
    Value:
      Fn::ToJsonString:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
    Description: Deployment registration management configuration JSON.
  DeploymentStackSettings:
    Value:
      Fn::ToJsonString:
        deploymentModel: push
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Ref: AWS::NoValue
        domains:
          Fn::If:
          - HasDomainName
          - customDomains:
              public-api:
                domain:
                  Ref: DomainName
                certificate:
                  aws:
                    certificateArn:
                      Ref: CertificateArn
          - Ref: AWS::NoValue
    Description: Deployment registration settings JSON.
  DeploymentResources:
    Value: '[]'
    Description: Deployment registration resources JSON.
